method of xml write.

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>Lab2_Messenger</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+	<dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+    </dependencies>
 
 </project>
