--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,24 @@
 
     <packaging>jar</packaging>
 
-    <name>Serv</name>
+    <name>Messenger</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <build>
+
+        <resources>
+            <resource>
+                <directory>src</directory>
+                <includes>
+                    <include>MessengerConf.xml</include>
+                    <include>fon.jpg</include>
+                </includes>
+
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -24,46 +37,44 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
-
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>server.controller.ControllerServer</mainClass>
-                            <packageName>server.controller</packageName>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.4</version>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.1</version>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
+                        <id>server-build</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <includeScope>compile</includeScope>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>server.controller.ControllerServer</mainClass>
+                                </transformer>
+                            </transformers>
+                            <finalName>server-runnable</finalName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>client-build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>client.controller.Controller</mainClass>
+                                </transformer>
+                            </transformers>
+                            <finalName>client-runnable</finalName>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 
@@ -83,6 +94,7 @@
             <artifactId>miglayout-swing</artifactId>
             <version>4.1</version>
         </dependency>
+
     </dependencies>
 
 </project>
